--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-shadow-2": "^6.0.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
