--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
 		"slug": "safar_driver_app",
 		"version": "1.0.0",
 		"orientation": "portrait",
+		"jsEngine": "hermes",
 		"icon": "./assets/icon.png",
 		"splash": {
 			"image": "./assets/splash.png",
@@ -25,6 +26,12 @@
 		},
 		"web": {
 			"favicon": "./assets/favicon.png"
-		}
+		},
+		"plugins": [
+			"expo-image-picker",
+			{
+				"photosPermission": "Guvohnomani tasdiqlash uchun ruxsat bering!"
+			}
+		]
 	}
 }
