complate time pickers

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
 		"web": {
 			"favicon": "./assets/favicon.png"
 		},
-		"plugins": ["expo-image-picker"]
+		"plugins": ["expo-image-picker"],
+		"userInterfaceStyle": "automatic"
 	}
 }
