--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-masked-text": "^1.13.0",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "^3.3.2",
@@ -32,7 +33,8 @@
     "react-native-shadow-2": "^6.0.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-native-woodpicker": "^0.3.17"
+    "react-native-woodpicker": "^0.3.17",
+    "react-query": "^3.34.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
