--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "17.0.1",
