--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"@react-navigation/native-stack": "^6.2.5",
 		"expo": "~44.0.0",
 		"expo-app-loading": "^1.3.0",
+		"expo-device": "~4.1.0",
 		"expo-font": "~10.0.4",
 		"expo-image-picker": "~12.0.1",
 		"expo-linking": "~3.0.0",
+		"expo-notifications": "~0.14.0",
 		"expo-secure-store": "~11.1.0",
 		"expo-splash-screen": "~0.14.1",
 		"expo-status-bar": "~1.2.0",
@@ -45,6 +47,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
+		"@types/react": "^18.0.25",
+		"@types/react-native": "^0.70.6",
 		"react-app-rewired": "^2.2.1"
 	},
 	"private": true
