--- a/package.json
+++ b/package.json
@@ -10,45 +10,45 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "~1.15.0",
-		"@react-native-community/datetimepicker": "4.0.0",
-		"@react-native-community/netinfo": "7.1.3",
-		"@react-native-picker/picker": "^2.2.1",
+		"@react-native-async-storage/async-storage": "~1.17.3",
+		"@react-native-community/datetimepicker": "6.1.2",
+		"@react-native-community/netinfo": "8.2.0",
+		"@react-native-picker/picker": "2.4.0",
 		"@react-navigation/bottom-tabs": "^6.0.9",
 		"@react-navigation/native": "^6.0.6",
 		"@react-navigation/native-stack": "^6.2.5",
-		"expo": "~44.0.0",
-		"expo-app-loading": "^1.3.0",
-		"expo-device": "~4.1.0",
-		"expo-font": "~10.0.4",
-		"expo-image-picker": "~12.0.1",
-		"expo-linking": "~3.0.0",
-		"expo-notifications": "~0.14.0",
-		"expo-secure-store": "~11.1.0",
-		"expo-splash-screen": "~0.14.1",
-		"expo-status-bar": "~1.2.0",
-		"expo-updates": "~0.11.7",
+		"expo": "^45.0.0",
+		"expo-app-loading": "~2.0.0",
+		"expo-device": "~4.2.0",
+		"expo-font": "~10.1.0",
+		"expo-image-picker": "~13.1.1",
+		"expo-linking": "~3.1.0",
+		"expo-notifications": "~0.15.4",
+		"expo-secure-store": "~11.2.0",
+		"expo-splash-screen": "~0.15.1",
+		"expo-status-bar": "~1.3.0",
+		"expo-updates": "~0.13.4",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
-		"react": "17.0.1",
+		"react": "17.0.2",
 		"react-art": "17.0.0",
-		"react-dom": "17.0.0",
-		"react-native": "0.64.3",
+		"react-dom": "17.0.2",
+		"react-native": "0.68.2",
 		"react-native-masked-text": "^1.13.0",
 		"react-native-modal-datetime-picker": "^13.0.1",
-		"react-native-pager-view": "5.4.9",
-		"react-native-safe-area-context": "^3.3.2",
-		"react-native-screens": "^3.10.2",
+		"react-native-pager-view": "5.4.15",
+		"react-native-safe-area-context": "4.2.4",
+		"react-native-screens": "~3.11.1",
 		"react-native-shadow-2": "^6.0.2",
-		"react-native-svg": "12.1.1",
-		"react-native-web": "^0.18.7",
+		"react-native-svg": "12.3.0",
+		"react-native-web": "0.17.7",
 		"react-native-woodpicker": "^0.3.17",
 		"react-query": "^3.34.14"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
-		"@types/react": "^18.0.25",
-		"@types/react-native": "^0.70.6",
+		"@types/react": "~17.0.21",
+		"@types/react-native": "~0.67.6",
 		"react-app-rewired": "^2.2.1"
 	},
 	"private": true
