--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
 	"expo": {
-		"name": "safar_driver_app",
+		"name": "Safar Driver",
 		"slug": "safar_driver_app",
-		"version": "1.1.0",
+		"version": "1.2.0",
 		"orientation": "portrait",
 		"jsEngine": "hermes",
 		"icon": "./images/ios_icon.png",
@@ -35,7 +35,7 @@
 				"android.permission.RECORD_AUDIO"
 			],
 			"adaptiveIcon": {
-				"foregroundImage": "./assets/adaptive-icon.png",
+				"foregroundImage": "./assets/icon.png",
 				"backgroundColor": "#FFFFFF"
 			},
 			"package": "com.muhammadyunusuz.safar_driver_app"
